--- a/.github/workflows/release-version.yaml
+++ b/.github/workflows/release-version.yaml
@@ -21,6 +21,8 @@ jobs:
     name: Creates a release for this version.
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      contents: write
     steps:
       - name: Download binaries from previous step
         uses: actions/download-artifact@v3
@@ -30,6 +32,8 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           automatic_release_tag: latest
           prerelease: false
-          files: /dist
+          files: |
+            ${{ github.workspace }}/binary-darwin-amd
+            ${{ github.workspace }}/binary-darwin-arm
           title: Release ${{ github.ref }}
           draft: true
