--- a/.github/workflows/release-version.yaml
+++ b/.github/workflows/release-version.yaml
@@ -1,7 +1,7 @@
-on: workflow_dispatch
-  # push:
-  #   tags:
-  #     - 'v[0-9]+.[0-9]+.[0-9]+'
+on:
+  push:
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   build:
